--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
+    "eslint": "^8.57.1",
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
   }
