--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://github.com/Marpace/tinyapp#readme",
   "dependencies": {
     "bcryptjs": "^3.0.2",
-    "cookie-parser": "^1.4.7",
+    "cookie-session": "^2.1.0",
     "ejs": "^3.1.10",
     "eslint": "^8.57.1",
     "express": "^5.1.0",
