--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "cookie-session": "^2.1.0",
     "ejs": "^3.1.10",
     "eslint": "^8.57.1",
-    "express": "^5.1.0",
-    "nodemon": "^3.1.10"
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "chai": "^4.3.1",
-    "mocha": "^11.7.1"
+    "mocha": "^11.7.1",
+    "nodemon": "^3.1.10"
   }
 }
